--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -27,6 +27,7 @@ library
                      , ghc-paths
                      , ghc-syb-utils
                      , syb
+                     , MissingH
   hs-source-dirs:      src
   default-language:    Haskell2010
 
@@ -53,3 +54,4 @@ Test-Suite test
                        ghc-paths
                      , ghc-syb-utils
                      , syb
+                     , MissingH
