Progress on types

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /dist/
 /tests/examples/LetExpr.hs.exactprinter.out
 /tests/examples/LetStmt.hs.exactprinter.out
+/tests/examples/PatBind.hs.exactprinter.out
