--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@
 /tests/examples/LetStmt.hs.exactprinter.out
 /tests/examples/PatBind.hs.exactprinter.out
 /tests/examples/Simple.hs.exactprinter.out
+/tests/examples/Tuple.hs.exactprinter.out
