--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /tests/examples/PatBind.hs.exactprinter.out
 /tests/examples/Simple.hs.exactprinter.out
 /tests/examples/Tuple.hs.exactprinter.out
+/TAGS
+/tags
