--- a/.travis.yml
+++ b/.travis.yml
@@ -19,30 +19,20 @@ before_install:
 
 install:
  - travis_retry cabal update
- - cabal install --only-dependencies
+ - cabal install --only-dependencies --enable-tests
 
 # Here starts the actual work to be performed for the package under
 # test; any command which exits with a non-zero exit code causes the
 # build to fail.
 script:
  # -v2 provides useful information for debugging
- - cabal configure -v2
+ - cabal configure -v2 --enable-tests
 
  # this builds all libraries and executables
  # (including tests/benchmarks)
  - cabal build
 
- # tests that a source-distribution can be generated
- - cabal sdist
+ - cabal test
 
- # check that the generated source-distribution can be built & installed
- - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
-   cd dist/;
-   if [ -f "$SRC_TGZ" ]; then
-      cabal install --force-reinstalls "$SRC_TGZ";
-   else
-      echo "expected '$SRC_TGZ' not found";
-      exit 1;
-   fi
 
 # EOF
