--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@
 /tests/examples/FunDeps.hs.exactprinter.out
 /tests/examples/ImplicitParams.hs.exactprinter.out
 /tests/examples/RecursiveDo.hs.exactprinter.out
+/tests/examples/TypeFamilies.hs.exactprinter.out
