--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@
 /tests/examples/RecursiveDo.hs.exactprinter.out
 /tests/examples/TypeFamilies.hs.exactprinter.out
 /tests/examples/DataFamilies.hs.exactprinter.out
+/tests/examples/Deriving.hs.exactprinter.out
