--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@
 /tests/examples/Warning.hs.exactprinter.out
 /tests/examples/Annotations.hs.exactprinter.out
 /tests/examples/Rules.hs.exactprinter.out
+/tests/examples/Vect.hs.exactprinter.out
