--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,5 @@
 /tests/examples/EmptyMostly.hs.exactprinter.out
 /tests/examples/ImportsSemi.hs.exactprinter.out
 /tests/examples/Stmts.hs.exactprinter.out
+/tests/examples/EmptyMostly2.hs.exactprinter.out
+/tests/examples/EmptyMostlyInst.hs.exactprinter.out
