--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,4 @@
 /tests/examples/Zipper.hs.exactprinter.out
 /tests/examples/AltsSemis.hs.exactprinter.out
 /tests/examples/Utils2.hs.exactprinter.out
+/tests/examples/EmptyMostlyNoSemis.hs.exactprinter.out
