About to try toConstr instead of typeOf

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,4 @@
 /tests/examples/AltsSemis.hs.exactprinter.out
 /tests/examples/Utils2.hs.exactprinter.out
 /tests/examples/EmptyMostlyNoSemis.hs.exactprinter.out
+/tests/examples/B.hs.exactprinter.out
