Making tests run via cabal test, giving Travis a go

--- a/.gitignore
+++ b/.gitignore
@@ -1,94 +1,8 @@
 /dist/
-/tests/examples/LetExpr.hs.exactprinter.out
-/tests/examples/LetStmt.hs.exactprinter.out
-/tests/examples/PatBind.hs.exactprinter.out
-/tests/examples/Simple.hs.exactprinter.out
-/tests/examples/Tuple.hs.exactprinter.out
+/tests/examples/*.out
+*.refactored.hs
 /TAGS
 /tags
-/tests/examples/LetExprSemi.hs.exactprinter.out
-/tests/examples/Sigs.hs.exactprinter.out
-/tests/examples/ExprPragmas.hs.exactprinter.out
 /tests/examples/LetExpr.hs.1
-/tests/examples/ListComprehensions.hs.exactprinter.out
-/tests/examples/MonadComprehensions.hs.exactprinter.out
-/tests/examples/FunDeps.hs.exactprinter.out
-/tests/examples/ImplicitParams.hs.exactprinter.out
-/tests/examples/RecursiveDo.hs.exactprinter.out
-/tests/examples/TypeFamilies.hs.exactprinter.out
-/tests/examples/DataFamilies.hs.exactprinter.out
-/tests/examples/Deriving.hs.exactprinter.out
-/tests/examples/Default.hs.exactprinter.out
-/tests/examples/ForeignDecl.hs.exactprinter.out
-/tests/examples/Deprecation.hs.exactprinter.out
-/tests/examples/Infix.hs.exactprinter.out
-/tests/examples/Mixed.hs.exactprinter.out
-/tests/examples/Warning.hs.exactprinter.out
-/tests/examples/Annotations.hs.exactprinter.out
-/tests/examples/Rules.hs.exactprinter.out
-/tests/examples/Vect.hs.exactprinter.out
-/tests/examples/DocDecls.hs.exactprinter.out
-/tests/examples/QuasiQuote.hs.exactprinter.out
-/tests/examples/Splice.hs.exactprinter.out
-/tests/examples/Roles.hs.exactprinter.out
-/tests/examples/EmptyMostly.hs.exactprinter.out
-/tests/examples/ImportsSemi.hs.exactprinter.out
-/tests/examples/Stmts.hs.exactprinter.out
-/tests/examples/EmptyMostly2.hs.exactprinter.out
-/tests/examples/EmptyMostlyInst.hs.exactprinter.out
-/tests/examples/ForAll.hs.exactprinter.out
-/tests/examples/PatSynBind.hs.exactprinter.out
-/tests/examples/Arrow.hs.exactprinter.out
-/tests/examples/HsDo.hs.exactprinter.out
-/tests/examples/Move1.hs.exactprinter.out
-/tests/examples/MultiParamTypeClasses.hs.exactprinter.out
-/tests/examples/Associated.hs.exactprinter.out
-/tests/examples/DataDecl.hs.exactprinter.out
-/tests/examples/PArr.hs.exactprinter.out
-/tests/examples/ViewPatterns.hs.exactprinter.out
-/tests/examples/BangPatterns.hs.exactprinter.out
-/tests/examples/RebindableSyntax.hs.exactprinter.out
-/tests/examples/TypeOperators.hs.exactprinter.out
-/tests/examples/Arrows.hs.exactprinter.out
-/tests/examples/DerivingOC.hs.exactprinter.out
-/tests/examples/Existential.hs.exactprinter.out
-/tests/examples/FunctionalDeps.hs.exactprinter.out
-/tests/examples/GenericDeriving.hs.exactprinter.out
-/tests/examples/NullaryTypeClasses.hs.exactprinter.out
-/tests/examples/OverloadedStrings.hs.exactprinter.out
-/tests/examples/RankNTypes.hs.exactprinter.out
-/tests/examples/ScopedTypeVariables.hs.exactprinter.out
-/tests/examples/StaticPointers.hs.exactprinter.out
-/tests/examples/TH.hs.exactprinter.out
-/tests/examples/Guards.hs.exactprinter.out
-/tests/examples/RdrNames.hs.exactprinter.out
-/tests/examples/ExtraConstraints1.hs.exactprinter.out
-/tests/examples/AddAndOr3.hs.exactprinter.out
-/tests/examples/Ann01.hs.exactprinter.out
-/tests/examples/Cg008.hs.exactprinter.out
-/tests/examples/Dead1.hs.exactprinter.out
-/tests/examples/ParensAroundContext.hs.exactprinter.out
-/tests/examples/Stream.hs.exactprinter.out
-/tests/examples/StrictLet.hs.exactprinter.out
-/tests/examples/T2388.hs.exactprinter.out
-/tests/examples/T3132.hs.exactprinter.out
-/tests/examples/Trit.hs.exactprinter.out
-/tests/examples/Cpp.hs.exactprinter.out
-/tests/examples/Lhs.lhs.exactprinter.out
-/src/Language/Haskell/GHC/ExactPrint.refactored.hs
-/src/Language/Haskell/GHC/ExactPrint/Utils.hs.exactprinter.out
-/tests/examples/FromUtils.hs.exactprinter.out
-/tests/examples/Sigs.refactored.hs
-/tests/examples/Zipper.hs.exactprinter.out
-/tests/examples/AltsSemis.hs.exactprinter.out
-/tests/examples/Utils2.hs.exactprinter.out
-/tests/examples/EmptyMostlyNoSemis.hs.exactprinter.out
-/tests/examples/B.hs.exactprinter.out
-/tests/examples/Test.hs.exactprinter.out
-/tests/examples/Unicode.hs.exactprinter.out
-/src/Language/Haskell/GHC/ExactPrint/Types.refactored.hs
-/src/Language/Haskell/GHC/ExactPrint/Utils.refactored.hs
-/tests/examples/RecordUpdate.hs.exactprinter.out
-/tests/examples/BCase.hs.exactprinter.out
-/tests/examples/LayoutWhere.hs.exactprinter.out
-/tests/examples/LayoutLet.hs.exactprinter.out
+/ghc-compile-speed.txt
+/src/RoundTrip.hs
