--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -4,7 +4,15 @@
 name:                ghc-exactprint
 version:             0.1.0.0
 synopsis:            ExactPrint for GHC
--- description:
+description:         Using the API Annotations available from GHC 7.10 RC2, this
+                     library provides a means to round trip any* code that can
+                     be compiled by GHC
+                     .
+                     * any currently excludes anything using CPP or lhs.
+                     .
+                     The dependency footprint is deliberately kept small so that
+                     it can easily be tested against GHC HEAD
+
 license:             BSD3
 license-file:        LICENSE
 author:              Alan Zimmerman
@@ -48,5 +56,5 @@ Test-Suite test
                        ghc-paths,
                        HUnit,
                        random
---                       text
+
 
