--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -57,4 +57,8 @@ Test-Suite test
                        HUnit,
                        random
 
+source-repository head
+  type:     git
+  location: https://github.com/alanz/ghc-exactprint.git
+
 
