--- a/.travis.yml
+++ b/.travis.yml
@@ -41,4 +41,7 @@ script:
  #      echo "expected '$SRC_TGZ' not found";
  #      exit 1;
 
+notifications:
+  irc: "irc.freenode.org#haskell-refactorer"
+
 # EOF
