Imclude stm for tests

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -59,7 +59,8 @@ Test-Suite test
                        ghc,
                        ghc-paths,
                        HUnit,
-                       random
+                       random,
+                       stm
 
 source-repository head
   type:     git
