--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -36,6 +36,7 @@ library
                      , ghc
                      , ghc-paths
                      , syb
+                     , mtl
   hs-source-dirs:      src
   default-language:    Haskell2010
   -- Note: the following constraint actually requires RC2 or better
