Tweak travis file

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 
 matrix:
   allow_failures:
-   - env: GHCVER=head  CABALVER=head
+   - env: CABALVER=head GHCVER=head
 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
