--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -29,6 +29,7 @@ library
   exposed-modules:     Language.Haskell.GHC.ExactPrint
                      , Language.Haskell.GHC.ExactPrint.Types
                      , Language.Haskell.GHC.ExactPrint.Utils
+  GHC-Options:         -Wall
   -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.9
