--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -43,6 +43,7 @@ library
                      , mtl
                      , syb
                      , free
+                     , HUnit
   hs-source-dirs:      src
   default-language:    Haskell2010
   -- Note: the following constraint actually requires RC2 or better
