--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -30,6 +30,7 @@ library
                      , Language.Haskell.GHC.ExactPrint.Types
                      , Language.Haskell.GHC.ExactPrint.Utils
                      , Language.Haskell.GHC.ExactPrint.Common
+                     , Language.Haskell.GHC.ExactPrint.Lookup
   GHC-Options:         -Wall
   -- other-modules:
   -- other-extensions:
@@ -43,7 +44,6 @@ library
                      , mtl
                      , syb
                      , free
-                     , HUnit
   hs-source-dirs:      src
   default-language:    Haskell2010
   -- Note: the following constraint actually requires RC2 or better
