--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
  - cabal configure --enable-coverage --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
  - cabal build   # this builds all libraries and executables (including tests/benchmarks)
- - run-cabal-test
+ - cabal test
  - cabal check
  - cabal sdist   # tests that a source-distribution can be generated
 
