--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -28,12 +28,13 @@ cabal-version:       >=1.10
 library
   exposed-modules:     Language.Haskell.GHC.ExactPrint
                      , Language.Haskell.GHC.ExactPrint.Types
+                     , Language.Haskell.GHC.ExactPrint.Utils
                      , Language.Haskell.GHC.ExactPrint.Delta
                      , Language.Haskell.GHC.ExactPrint.Lookup
                      , Language.Haskell.GHC.ExactPrint.Annotate
                      , Language.Haskell.GHC.ExactPrint.Print
   GHC-Options:         -Wall
-  other-modules:       Language.Haskell.GHC.ExactPrint.Utils
+  -- other-modules:
   -- other-extensions:
   build-depends:       base >=4.7 && <4.9
                      , containers
