Silence stderr when running tests

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -78,6 +78,7 @@ Test-Suite test
                      , random
                      , stm
                      , syb
+                     , silently
 
 
 
