--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
  - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER # see note about happy/alex
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
  - travis_retry cabal update
- - cabal install hpc-coveralls
+# - cabal install hpc-coveralls
 
 install:
  - cabal --version
@@ -41,7 +41,7 @@ script:
  #      exit 1;
 
 after_script:
- - hpc-coveralls test
+# - hpc-coveralls test
 
 notifications:
   irc: "irc.freenode.org#haskell-refactorer"
