Added basic scaffolding for ifToCase test, and Transform

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -40,6 +40,7 @@ library
                      , Language.Haskell.GHC.ExactPrint.Lookup
                      , Language.Haskell.GHC.ExactPrint.Annotate
                      , Language.Haskell.GHC.ExactPrint.Print
+                     , Language.Haskell.GHC.ExactPrint.Transform
   GHC-Options:         -Wall
   -- other-modules:
   -- other-extensions:
