--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -100,6 +100,7 @@ executable roundtrip
                , ghc-paths
                , temporary
                , text
+               , syb
   ghc-options:
     -threaded
 
