CPP processing works fully.
We are lexing the source multiple times though, should be able to limit
this to twice max, once for the pristine source, and once for the
preprocessed to perform the diff for CPP

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /tests/examples/*.out
 /tests/examples/*.incons
 /tests/examples/*.hi
+/tests/examples/*.hspp
 /tests/examples/*.o
 /tests/examples/*.dyn*
 *.refactored.hs
