--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 # See also https://github.com/hvr/multi-ghc-travis for more information
 env:
  - CABALVER=1.22 GHCVER=7.10.1
- - CABALVER=head GHCVER=head
+ # - CABALVER=head GHCVER=head
 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
