--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -54,7 +54,7 @@ library
                      , ghc-paths
                      , ghc-syb-utils
                      , mtl
-                     , syb < 0.5
+                     , syb
                      , free
   hs-source-dirs:      src
   default-language:    Haskell2010
@@ -81,7 +81,7 @@ Test-Suite test
                      , mtl
                      , random
                      , stm
-                     , syb < 0.5
+                     , syb
                      , silently
                      , filemanip
 
