--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ env:
  - CABALVER=head GHCVER=7.10.2
  - CABALVER=head GHCVER=head
 
+ # Focus on head again when 7.10.2 sorted
+ matrix:
+  allow_failures:
+    - env: GHCVER=head
+ 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
