--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -2,7 +2,7 @@
 -- documentation, see http://haskell.org/cabal/users-guide/
 
 name:                ghc-exactprint
-version:             0.2
+version:             0.3
 synopsis:            ExactPrint for GHC
 description:         Using the API Annotations available from GHC 7.10 RC2, this
                      library provides a means to round trip any* code that can
@@ -13,7 +13,7 @@ description:         Using the API Annotations available from GHC 7.10 RC2, this
                      The dependency footprint is deliberately kept small so that
                      it can easily be tested against GHC HEAD
                      .
-                     Note: requires GHC 7.10 RC2 or later
+                     Note: requires GHC 7.10.2 or later
 
 license:             BSD3
 license-file:        LICENSE
@@ -58,7 +58,6 @@ library
                      , free
   hs-source-dirs:      src
   default-language:    Haskell2010
-  -- Note: the following constraint actually requires RC2 or better
   if impl (ghc < 7.10)
       buildable: False
 
@@ -69,6 +68,8 @@ Test-Suite test
   other-modules:      Common, Consistency
   GHC-Options:         -threaded
   Default-language:    Haskell2010
+  if impl (ghc < 7.10)
+      buildable: False
   Build-depends:       HUnit
                      , base < 5
                      , containers
@@ -84,12 +85,16 @@ Test-Suite test
                      , syb
                      , silently
                      , filemanip
+                     , QuickCheck
 
 executable roundtrip
   main-is: Roundtrip.hs
   hs-source-dirs: tests
   other-modules: Common
+                 QuickCheckTests
   default-language:    Haskell2010
+  if impl (ghc < 7.10)
+      buildable: False
   build-depends: ghc-exactprint
                , filemanip
                , HUnit
@@ -108,6 +113,8 @@ executable static
   main-is: Static.hs
   hs-source-dirs: tests
   default-language:    Haskell2010
+  if impl (ghc < 7.10.2)
+      buildable: False
   build-depends: base
                , directory
                , filepath
