--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ env:
 matrix:
   allow_failures:
     - env: CABALVER=head GHCVER=head
- 
+
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
  - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
@@ -21,8 +21,11 @@ before_install:
 
 install:
  - cabal --version
+ - cabal sandbox init
  - echo "$(ghc --version) [$(ghc --print-project-git-commit-id 2> /dev/null || echo '?')]"
  - travis_retry cabal update
+ - git clone https://github.com/mpickering/refact
+ - cabal sandbox add-source ./refact
  - cabal install --only-dependencies --enable-tests --enable-benchmarks
 
 # Here starts the actual work to be performed for the package under
