--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -123,7 +123,7 @@ executable static
 
 executable transform
   main-is: TestTransform.hs
-  Default-language:    Haskell2010
+  default-language: Haskell2010
   build-depends: base
                , refact
                , ghc-exactprint
