--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -122,6 +122,7 @@ executable static
 
 executable transform
   main-is: TestTransform.hs
+  default-language: Haskell2010
   build-depends: base
                , refact
                , ghc-exactprint
