--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -123,9 +123,12 @@ executable static
 
 executable transform
   main-is: TestTransform.hs
+  hs-source-dirs:    . src
   default-language: Haskell2010
   build-depends: base
                , refact
+               , free
+               , ghc-paths
                , ghc-exactprint
                , ghc
                , containers
