--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -56,6 +56,7 @@ library
                      , mtl
                      , syb
                      , free
+                     , cabal-helper
   hs-source-dirs:      src
   default-language:    Haskell2010
   if impl (ghc < 7.10)
