--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -56,7 +56,7 @@ library
                      , mtl
                      , syb
                      , free
-                     , cabal-helper
+                     , cabal-helper >= 0.3.6.0
   hs-source-dirs:      src
   default-language:    Haskell2010
   if impl (ghc < 7.10)
