Add internal types module which contains all types.
Types now only exports types which could be useful to users of the
library.

--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -43,6 +43,9 @@ library
                      , Language.Haskell.GHC.ExactPrint.Transform
                      , Language.Haskell.GHC.ExactPrint.Types
                      , Language.Haskell.GHC.ExactPrint.Utils
+
+
+                     , Language.Haskell.GHC.ExactPrint.Internal.Types
   -- other-modules:
   -- other-extensions:
   GHC-Options:         -Wall
