--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -43,6 +43,7 @@ library
                      , Language.Haskell.GHC.ExactPrint.Transform
                      , Language.Haskell.GHC.ExactPrint.Types
                      , Language.Haskell.GHC.ExactPrint.Utils
+                     , Language.Haskell.GHC.ExactPrint.Parsers
 
 
                      , Language.Haskell.GHC.ExactPrint.Internal.Types
