--- a/stack-7.11.yaml
+++ b/stack-7.11.yaml
@@ -11,4 +11,5 @@ extra-deps:
 - profunctors-5.1.1
 - free-4.12.1
 - cabal-helper-0.3.6.0
-resolver: nightly-2015-06-25
+# resolver: nightly-2015-06-25
+resolver: nightly-2015-07-03
