--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -95,8 +95,7 @@ Test-Suite test
 executable roundtrip
   main-is: Roundtrip.hs
   hs-source-dirs: tests
-  other-modules: Common
-                 QuickCheckTests
+  other-modules: Test.Common
   default-language:    Haskell2010
   if impl (ghc < 7.10)
       buildable: False
