--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
 # build to fail.
 script:
  - if [ -f configure.ac ]; then autoreconf -i; fi
- - cabal configure --enable-coverage --enable-tests --enable-benchmarks -v2  # -v2 provides useful information for debugging
+ - cabal configure --enable-coverage --enable-tests --enable-benchmarks -v2 -froundtrip # -v2 provides useful information for debugging
  - cabal build   # this builds all libraries and executables (including tests/benchmarks)
  - cabal test
  - cabal check
