--- a/ghc-exactprint.cabal
+++ b/ghc-exactprint.cabal
@@ -32,6 +32,12 @@ source-repository head
   type:     git
   location: https://github.com/alanz/ghc-exactprint.git
 
+Flag roundtrip {
+  Description: Build roundtripping executables
+  Default:     False
+}
+
+
 library
   exposed-modules:     Language.Haskell.GHC.ExactPrint
                      , Language.Haskell.GHC.ExactPrint.Annotate
@@ -95,9 +101,8 @@ executable roundtrip
   hs-source-dirs: tests
   other-modules: Test.Common
   default-language:    Haskell2010
-  if impl (ghc < 7.10)
-      buildable: False
-  build-depends:
+  if impl (ghc >= 7.10) && flag (roundtrip)
+    build-depends:
                  HUnit
                , base
                , containers
@@ -109,6 +114,9 @@ executable roundtrip
                , ghc-paths
                , syb
                , temporary
+    buildable: True
+  else
+    buildable: False
   ghc-options:
     -threaded
 
@@ -116,9 +124,13 @@ executable static
   main-is: Static.hs
   hs-source-dirs: tests
   default-language:    Haskell2010
-  build-depends: base
-               , directory
-               , filepath
-               , Diff
+  if flag (roundtrip)
+    build-depends: base
+                 , directory
+                 , filepath
+                 , Diff
+    buildable: True
+  else
+    buildable: False
 
 
