--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,23 @@
 # NB: don't set `language: haskell` here
+language: c
+sudo: false
+
+addons:
+  apt:
+    sources:
+    - hvr-ghc
+    packages:
+    - cabal-install-head
+    - ghc-head
+
+cache:
+  directories:
+    - .cabal-sandbox
 
 # See also https://github.com/hvr/multi-ghc-travis for more information
 env:
  # - CABALVER=1.22 GHCVER=7.10.1
- - CABALVER=head GHCVER=7.10.2
+# - CABALVER=head GHCVER=7.10.2
  - CABALVER=head GHCVER=head
 
 # Focus on head again when 7.10.2 sorted
@@ -13,9 +27,6 @@ matrix:
 
 # Note: the distinction between `before_install` and `install` is not important.
 before_install:
- - travis_retry sudo add-apt-repository -y ppa:hvr/ghc
- - travis_retry sudo apt-get update
- - travis_retry sudo apt-get install cabal-install-$CABALVER ghc-$GHCVER # see note about happy/alex
  - export PATH=/opt/ghc/$GHCVER/bin:/opt/cabal/$CABALVER/bin:$PATH
  - travis_retry cabal update
 
@@ -38,15 +49,9 @@ script:
  - cabal test
  - cabal check
  - cabal sdist   # tests that a source-distribution can be generated
-
-# The following scriptlet checks that the resulting source distribution can be built & installed
- # - export SRC_TGZ=$(cabal info . | awk '{print $2 ".tar.gz";exit}') ;
- #   cd dist/;
- #   if [ -f "$SRC_TGZ" ]; then
- #      cabal install --force-reinstalls "$SRC_TGZ";
- #   else
- #      echo "expected '$SRC_TGZ' not found";
- #      exit 1;
+ # check that the generated source-distribution can be built & installed
+ - SRC_TGZ=$(cabal info . | awk '{print $2;exit}').tar.gz &&
+      (cd dist && cabal install --force-reinstalls "$SRC_TGZ")
 
 notifications:
   irc: "irc.freenode.org#haskell-refactorer"
