Update stack nightlies

--- a/stack-7.11.yaml
+++ b/stack-7.11.yaml
@@ -13,4 +13,5 @@ extra-deps:
 - cabal-helper-0.3.6.0
 # resolver: nightly-2015-06-25
 # resolver: nightly-2015-07-03
-resolver: nightly-2015-07-12
+# resolver: nightly-2015-07-12
+resolver: nightly-2015-07-19
