--- a/stack.yaml
+++ b/stack.yaml
@@ -10,4 +10,5 @@ extra-deps:
 # - binary-0.7.5.0
 # resolver: nightly-2015-06-25
 # resolver: nightly-2015-07-03
-resolver: nightly-2015-07-12
+# resolver: nightly-2015-07-12
+resolver: nightly-2015-07-19
